mesa/st/glsl_to_tgsi: Expose array live range tracking and merging

Extend the interface of get_temp_registers_required_live_ranges to also accomodate
the live range tracking for arrays and tie the array merging in.

This fixes the piglit on R600/Barts:
  glsl-1.30/execution/fs-multiple-large-local-arrays

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100200